<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp">

            <FrameLayout
                style="?attr/bottomSheetStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorPrimary"
                    android:text="@string/add_new_relative_card"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/alert_add_exam_progress"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/surname"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/editSurname_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_box"
                android:hint="@string/Petrov"
                android:minWidth="180dp"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimarySuperLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/name"
                        android:textColor="@color/colorText" />

                    <EditText
                        android:id="@+id/editName_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edit_text_box"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorText"
                        android:hint="@string/Ivan"
                        android:minWidth="180dp"
                        android:padding="10dp"
                        android:text=""
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimarySuperLight" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/second_name"
                        android:textColor="@color/colorText" />

                    <EditText
                        android:id="@+id/editSecondName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/edit_text_box"
                        android:drawablePadding="10dp"
                        android:drawableTint="@color/colorText"
                        android:hint="@string/ivanovich"
                        android:minWidth="180dp"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimarySuperLight" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/gender"
                android:textColor="@color/colorText" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"

                android:layout_marginEnd="10dp"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/famele"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:checked="false"
                    android:padding="4dp"
                    android:text="@string/female"
                    android:textSize="17sp" />

                <!--adding a radio button -->
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:checked="false"
                    android:padding="4dp"
                    android:text="@string/male"
                    android:textSize="17sp" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/birthPlace"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/editBirthPlace_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_box"
                android:hint="@string/birthPlace"
                android:minWidth="180dp"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimarySuperLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/placeOfLiving"
                android:textColor="@color/colorText" />

            <EditText
                android:id="@+id/editPlaceOfLiving_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_box"
                android:hint="@string/place"
                android:minWidth="180dp"
                android:padding="10dp"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimarySuperLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/livingStatus"
                android:textColor="@color/colorText" />

            <Spinner
                android:id="@+id/livingStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/spinnerItems"
                android:minWidth="180dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimarySuperLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/bithDate"
                android:textColor="@color/colorText" />
    <TextView
        android:id="@+id/chooseDate"
        android:text="@string/chooseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
            <DatePicker
                android:id="@+id/brthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="true"
                android:isScrollContainer="true"
                android:datePickerMode="calendar"
                android:visibility="gone"
                android:calendarTextColor="@color/white"
                android:spinnersShown="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editAdd_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/add" />

            </LinearLayout>
</LinearLayout>