<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sharedViewModel"
            type="com.example.helper.ui.mapFeature.helpers.GeofenceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addgeofence.Step3Fragment">

        <TextView
            android:id="@+id/slider_value_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/_500_0_m"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/slider"
            app:layout_constraintEnd_toEndOf="@+id/slider"
            app:layout_constraintStart_toStartOf="@+id/slider" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            updateSliderValueTextView="@{sliderValueTextView}"
            getGeoRadius="@{sharedViewModel}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:stepSize="500.0"
            android:value="500.0"
            android:valueFrom="500.0"
            android:valueTo="10000.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/geofence_radius_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/choose_a_radius_for_your_geofence"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/slider"
            app:layout_constraintStart_toStartOf="@+id/slider"
            app:layout_constraintTop_toBottomOf="@+id/slider" />

        <TextView
            android:id="@+id/step_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/next"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/step_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/back"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>